Learning how maven.yml works in github